--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
     "nuxt": "^3.14.159",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "@vite-pwa/nuxt": "^0.10.6",
+    "nuxt-mongoose": "^1.0.6",
+    "vuetify-nuxt-module": "^0.18.3"
   }
 }
