--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "vue-router": "latest"
   },
   "devDependencies": {
+    "@pinia-plugin-persistedstate/nuxt": "latest",
+    "@pinia/nuxt": "latest",
     "@vite-pwa/nuxt": "^0.10.6",
     "nuxt-mongoose": "^1.0.6",
     "vuetify-nuxt-module": "^0.18.3"
